2007-09-19  Helmut Eller  <heller@common-lisp.net>

	* bridge.el: moved to contrib.

	* tree-widget.el: File deleted. Only needed by contribs and is
	distributed with Emacs 21.

	* slime.el: Reorder some devfars and menus code so that the
	compiler doesn't complain about free variables.

	Fix apropos in Emacs 22.

	* slime.el (slime-print-apropos): Add button props for Emacs 22.
	(slime-call-describer): ARG is a marker in Emacs 22.

	(def-slime-selector-method ?c): Wait until slime-list-threads
	returns.

	Remove define-slime-dialect.

	* slime.el (define-slime-dialect): Deleted. Use
	slime-lisp-implementations instead.

	Introduce a slime-start-and-init function.

	* slime.el (slime-start-and-init, slime-lisp-options): New
	functions.
	(slime-start-and-load): Use it.

	Simplify slime-length=.

	* slime.el (slime-length=, slime-length>): No need for vectors.

	Remove explicit support for Scheme mode.

	* slime.el (slime-scheme-mode-hook, slime-shared-lisp-mode-hook)
	Deleted.
	(slime-indentation-update-hooks): New hook.
	(slime-handle-indentation-update): Use it.

	Fix close-connection.

	* swank.lisp (close-connection): Use *log-output* instead of
	*debug-io* (which could be redirected to the to-be-closed
	connection).

2007-09-15  Helmut Eller  <heller@common-lisp.net>

	Let slime-setup load contribs.

	* slime.el (slime-setup): Take a list of contribs to load as
	argument.

	* slime-autoloads.el (slime-setup): Ditto, but delay the actual
	loading until slime is loaded.
	(slime-setup-contribs): New function.

2007-09-15  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-maybe-warn-for-different-source-root): Catch
	returned NIL from `slime-file-name-merge-source-root' if the two
	filenames don't share a common source root. 
	Reported by Frank Goenninger.
	
2007-09-15  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-split-string): New semi-portability function.
	The behaviour of `split-string' changed between Emacs21 and